# sabOOters

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  pre-commit.yaml
src/core/: board.py  game.py  player.py  round.py
src/core/cards/: action_card.py  build_deck.py  card.py  cards_data.json  path_card.py  roles.py
src/tests/: test_action_card.py  test_board.py  test_card.py  test_deck.py  test_path_card.py  test_player.py  test_roles.py  test_round.py
