[project]
name = "sabooters"
version = "0.0.1"
description = "Python implementation of the Saboteurs card game"
readme = "README.md"
authors = [
  { name = "Eliot CHRISTON", email = "eliot.christon@gmail.com" },
]

requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
]

urls.repository = "https://github.com/eliot-christon/sabOOters"

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pre-commit>=4.2",
  "pylint>=3.3.7",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.2",
  "types-requests>=2.32.4.20250611",
]

[tool.ruff]
line-length = 100

lint.select = [ "ALL" ]
lint.ignore = [
  "C901",    # Too much Complexity: needs refacto
  "COM812",  # Magic comma, handled by ruff-format
  "D2",      # Too precise documentation rules
  "D3",      # Too precise documentation rules
  "D4",      # Too precise documentation rules
  "D104",    # Missing docstring in public package : TODO
  "EM102",   # f-string in exception : not really an error
  "ERA",     # TODO: remove commented code
  "PLR091",  # Too much Complexity: needs refacto
  "PLR2004", # Magic values: needs refacto
  "PT",      # Pytest errors, we use unittest
  "S",       # Too strict rules
  "T20",     # Too strict on print: TODO remove print statements
  "TRY003",  # Too strict on exceptions
]

[tool.pylint.main]

max-line-length = 100
max-positional-arguments = 10
max-args = 10
max-nested-blocks = 10
min-public-methods = 0
max-attributes = 10
max-locals = 20
max-branches = 25
disable = [
  "too-many-statements",
  "too-many-return-statements",
  "too-many-function-args",
  "duplicate-code",
]
unsafe-load-any-extension = true
ignore = [
  ".venv",
]
